--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,7 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: product_catalog_production
+  username: adellis
+  password: <%= ENV['PRODUCTION_DATABASE_PASSWORD'] %>
